WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129244
Wrong active context when destroying GL objects
https://bugs.webkit.org/show_bug.cgi?id=129244
Summary
Wrong active context when destroying GL objects
Iago Toral
Reported
2014-02-24 00:37:17 PST
When we have multiple webviews, each with its own GL context, it is possible that destroying a view (for example closing a tab in the browser) triggers destruction of the underlying LayerTreeHost with the wrong active GL context. We should make sure that we set the right context as active before destroying GL objects in LayerTreeHostGtk::invalidate. I'll attach patch shortly.
Attachments
Patch
(1.97 KB, patch)
2014-02-24 00:47 PST
,
Iago Toral
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Iago Toral
Comment 1
2014-02-24 00:47:08 PST
Created
attachment 225031
[details]
Patch
WebKit Commit Bot
Comment 2
2014-02-24 07:19:17 PST
Comment on
attachment 225031
[details]
Patch Clearing flags on attachment: 225031 Committed
r164584
: <
http://trac.webkit.org/changeset/164584
>
WebKit Commit Bot
Comment 3
2014-02-24 07:19:19 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug