[GTK] Wrong active context when destroying GL objects. https://bugs.webkit.org/show_bug.cgi?id=129244

Patch by Iago Toral Quiroga <itoral@igalia.com> on 2014-02-24
Reviewed by Martin Robinson.

* WebProcess/WebPage/gtk/LayerTreeHostGtk.cpp:
(WebKit::LayerTreeHostGtk::invalidate): make context current before destroying GL objects.

Canonical link: https://commits.webkit.org/147292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164584 268f45cc-cd09-0410-ab3c-d52691b4dbfc